# rust-service-app

./: .gitignore  README.md
backend/: Cargo.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/crates/libs/lib-auth/: Cargo.toml
backend/crates/libs/lib-auth/src/: config.rs
backend/crates/libs/lib-auth/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
backend/crates/libs/lib-auth/src/token/: error.rs  mod.rs
backend/crates/libs/lib-core/: Cargo.toml
backend/crates/libs/lib-core/src/: config.rs
backend/crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
backend/crates/libs/lib-core/src/ctx/: error.rs
backend/crates/libs/lib-core/src/model/: base.rs  error.rs  mod.rs  user.rs
backend/crates/libs/lib-core/src/model/store/: mod.rs
backend/crates/libs/lib-rpc/: Cargo.toml
backend/crates/libs/lib-utils/: Cargo.toml
backend/crates/libs/lib-utils/src/: b64.rs  envs.rs
backend/crates/services/web-server/: Cargo.toml
backend/crates/services/web-server/examples/: quick_dev.rs
backend/crates/services/web-server/src/: config.rs  error.rs  main.rs
backend/crates/services/web-server/src/log/: mod.rs
backend/crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
backend/crates/tools/gen-key/: Cargo.toml
backend/crates/tools/gen-key/src/: main.rs
backend/examples/: gen_key.rs  quick_dev.rs
backend/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/_dev_utils/: dev_db.rs  mod.rs
backend/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
backend/src/ctx/: mod.rs
backend/src/log/: mod.rs
backend/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
backend/src/model/store/: error.rs  mod.rs
backend/src/pwd/: hmac_hasher.rs  mod.rs
backend/src/token/: mod.rs
backend/src/utils/: error.rs  mod.rs  time.rs
backend/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
backend/src/web/rpc/: mod.rs  task_rpc.rs
frontend/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.css  main.tsx
frontend/src/pages/: index.ts
frontend/src/pages/account/login/: index.tsx
frontend/src/pages/account/register/: index.tsx
frontend/src/pages/base/: index.tsx
frontend/src/pages/empty/: index.tsx
frontend/src/pages/home/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/store/: user.ts
frontend/src/types/api/user/: LoginReq.ts  LoginResp.ts  LogoffReq.ts  LogoffResp.ts  RegisterReq.ts  RegisterResp.ts
frontend/src/utils/: index.ts
frontend/src/utils/service/: index.ts  type.ts
