[package]
name = "rust-service-app"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zhangrunzhao"]
repository = "https://github.com/zhangrunzhao/rust-service-app"

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Tracting
tracing = "0.1"
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.25"
lazy-regex = "3"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
