[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- Data
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = [
  "sqlx-postgres",
  "with-uuid",
  "with-time",
] }
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
hyper = "0.14.27"
uuid = { version = "1", features = ["v4", "fast-rng"] }
derive_more = { version = "1.0.0-beta", features = ["from"] }
mime = "0.3"
# 引入前后端参数类型定义工具
ts-rs = "8.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
axum = { version = "0.6", features = ["macros"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
